maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: ')' expected but ';' found.
		if(!estFaceMur();){avance();}
                                ^Escaper:5: error: illegal start of statement
		if(!estFaceMur();){avance();}
                                 ^Escaper:22: error: Unmatched closing brace '}' ignored here
}
^